[gd_scene load_steps=3 format=3 uid="uid://b5yao1o3k81ud"]

[ext_resource type="Script" path="res://code/scripts/Detector.gd" id="1_kpng1"]

[sub_resource type="CircleShape2D" id="CircleShape2D_qd5dc"]
radius = 80.895

[node name="Detector" type="Area2D"]
script = ExtResource("1_kpng1")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_qd5dc")

[node name="QuestionMark" type="Label" parent="."]
visible = false
texture_filter = 1
offset_left = -19.0
offset_top = -77.0
offset_right = 21.0
offset_bottom = -54.0
text = "?"
horizontal_alignment = 1

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_body_exited"]
